[package]
name = "rust_vulkan_triangle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.30.0"
vulkano-win = "0.30.0"
winit = "0.26"
bytemuck = { version = "1.7", features = ["derive", "extern_crate_std", "min_const_generics"] }
